fix fullscreen background color + trying to create custom scrollbars

--- a/app/index.css
+++ b/app/index.css
@@ -200,6 +200,32 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+
+
+
+  ::-webkit-scrollbar{
+    width: 8px;
+    height: 8px;
+  }
+
+  ::-webkit-scrollbar-track{
+    background: transparent;
+    border: 1px solid hsl(var(--accent));
+    border-radius: var(--radius);
+  }
+
+  ::-webkit-scrollbar-thumb{
+    background: hsl(var(--accent));
+    border-radius: var(--radius);
+    border: 1px solid hsl(var(--accent)/0.1);
+  }
+
+  html{
+    scrollbar-width: thin;
+    scrollbar-color: hsl(var(--accent)) transparent;
+  }
+
+  
 }
 
 @layer base {
